feat: 媒体页添加媒体浏览功能
